2024-01-22T01:16:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7605179372 # 45
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-22
* notice: last 14d: unq all: 144 244
* notice: prev accum: outdated-unq outdated-all / unq all: 2335 6291 / 2509 6523
* notice: next accum: outdated-unq outdated-all / unq all: 2337 6293 / 2520 6538
* notice: prev exec diff / last date diff / accum: unq all: +11 +15 -0 -1 / +12 +17 -0 -0 / 12 17
* notice: removed / changed dates: [2024-01-07] / [2024-01-08 2024-01-21]

2024-01-21T16:19:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7602412703 # 44
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
* notice: last 14d: unq all: 139 231
* notice: prev accum: outdated-unq outdated-all / unq all: 2335 6291 / 2509 6522
* notice: next accum: outdated-unq outdated-all / unq all: 2335 6291 / 2509 6523
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-07 2024-01-21]

2024-01-21T08:19:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7599993271 # 43
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
* notice: last 14d: unq all: 139 231
* notice: prev accum: outdated-unq outdated-all / unq all: 2335 6291 / 2508 6521
* notice: next accum: outdated-unq outdated-all / unq all: 2335 6291 / 2509 6522
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-21]

2024-01-20T16:20:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7595496784 # 41