@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-22T01:16:55Z",
-  "count" : 22,
-  "count_minmax" : [ 21, 23 ],
-  "count_decinc" : [ -1, +23 ],
-  "uniques" : 19,
-  "uniques_minmax" : [ 18, 19 ],
-  "uniques_decinc" : [ -0, +19 ]
+  "timestamp" : "2024-01-22T08:22:20Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 23 ],
+  "count_decinc" : [ -21, +23 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 19 ],
+  "uniques_decinc" : [ -17, +19 ]
 }
