@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-01-22T01:16:55Z",
+  "timestamp" : "2024-01-22T08:22:20Z",
   "count_outdated" : 6293,
   "uniques_outdated" : 2337,
-  "count" : 6538,
-  "uniques" : 2520,
+  "count" : 6539,
+  "uniques" : 2521,
   "clones" : [
     {
       "timestamp": "2024-01-08T00:00:00Z",
-      "count": 22,
-      "count_minmax": [ 21, 23 ],
-      "count_decinc": [ 1, 23 ],
-      "uniques": 19,
-      "uniques_minmax": [ 18, 19 ],
-      "uniques_decinc": [ 0, 19 ]
+      "count": 2,
+      "count_minmax": [ 2, 23 ],
+      "count_decinc": [ 21, 23 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 19 ],
+      "uniques_decinc": [ 17, 19 ]
     },
     {
       "timestamp": "2024-01-09T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 12,
       "uniques_minmax": [ 1, 12 ],
       "uniques_decinc": [ 0, 12 ]
+    },
+    {
+      "timestamp": "2024-01-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
