@@ -1,11 +1,11 @@
 {
-  "count": 244,
-  "uniques": 144,
+  "count": 225,
+  "uniques": 132,
   "clones": [
     {
       "timestamp": "2024-01-08T00:00:00Z",
-      "count": 22,
-      "uniques": 19
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2024-01-09T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2024-01-21T00:00:00Z",
       "count": 17,
       "uniques": 12
+    },
+    {
+      "timestamp": "2024-01-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
