@@ -1,3 +1,12 @@
+2024-01-22T08:22:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7608310939 # 46
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-22
+* notice: last 14d: unq all: 132 225
+* notice: prev accum: outdated-unq outdated-all / unq all: 2337 6293 / 2520 6538
+* notice: next accum: outdated-unq outdated-all / unq all: 2337 6293 / 2521 6539
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -17 -20 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-08 2024-01-22]
+
 2024-01-22T01:16:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7605179372 # 45
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-22
